[package]
name = "lox-compiler"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lox-generated = { path = "../lox-generated" }
lalrpop-util = "0.19.5"
