[package]
name = "lox-repl"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
log = "0.4.14"
lox = { path = "../lox" }
lox-repl-macros = { path = "lox-repl-macros" }
maplit = "1.0.2"
once_cell = "1.7.2"
parking_lot = "0.11.1"
pretty_env_logger = "0.4.0"
structopt = "0.3.21"
